--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!-- CIERRE NAVBAR  --> 
 
         <!-- APERTURA HEADER -->
-        <header>
+        <header id="home">
 
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 
@@ -123,7 +123,7 @@
 
     <!-- APERTURA SECCIÓN PRESENTACIÓN -->
     
-    <section class="about-us d-none d-md-block">
+    <section id="about" class="about-us d-none d-md-block">
 
         <div class="container">
 
@@ -181,7 +181,7 @@
 
 
     <!-- APERTURA SECCIÓN DESTACADOS -->
-    <section class="featured">
+    <section id="featured" class="featured">
 
         <div class="container">
 
@@ -273,6 +273,25 @@
 
     
     <!-- APERTURA SECCIÓN FORMULARIO -->
+    <section id="contact" class="contact">
+
+        <div class="container-fluid">
+
+            <h3 class="py-5 text-center border-info border-bottom">Contacto</h3>
+
+            <div class="row">
+
+                <div class="col-12">
+
+                    <div class="typeform-widget my-4" data-url="https://form.typeform.com/to/HyF7S9eq?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
     <!-- CIERRE SECCIÓN FORMULARIO -->
 
 
@@ -280,6 +299,35 @@
 
 
     <!-- APERTURA FOOTER -->
+    <footer class="footer">
+
+        <div class="container">
+
+            <div class="row justify-content-around">
+
+                <div class="col-md-6 d-none d-md-block">
+
+                    <h3 class="footer-title pl-5 py-3">VIAJES CHILE</h3>
+
+                </div>
+
+                <div class="icons col-md-6">
+
+                    <a href="https://github.com/"><i class="fab fa-github-square fa-3x ml-4 py-2"></i></a>
+
+                    <a href="https://linkedin.com"><i class="fab fa-linkedin fa-3x ml-4 py-2"></i></a>
+
+                    <a href="https://twitter.com/"><i class="fab fa-twitter-square fa-3x ml-4 py-2"></i></a>
+
+                    <a href="https://facebook.com/"><i class="fab fa-facebook-square fa-3x ml-4 py-2"></i></a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </footer>
     <!-- CIERRE FOOTER -->
 
 
